--- a/methods/lab6/lab1.ipynb
+++ b/methods/lab6/lab1.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "source": [
     "Таким образом, наша формула превращается в \n",
-    "$\\quad f'(x) \\approx -\\frac{781}{940}f(x) + \\frac{5}{188}f(x − 12h) + \\frac{40}{47}f(x + h) + -\\frac{11}{235}f(x − 10h)$."
+    "$\\quad f'(x) \\approx \\frac{-\\frac{781}{940}f(x) + \\frac{5}{188}f(x − 12h) + \\frac{40}{47}f(x + h) + -\\frac{11}{235}f(x − 10h)}{h}$."
    ]
   },
   {
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5f482a8dc0>"
+       "<matplotlib.legend.Legend at 0x7ff9501b6b80>"
       ]
      },
      "execution_count": 2,
@@ -276,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5f073f5340>"
+       "<matplotlib.legend.Legend at 0x7ff90fac1fa0>"
       ]
      },
      "execution_count": 5,
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "0db82bef-1111-4656-9820-9f77d097929b",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f8bf27ca-e931-46df-85cc-da88ce67ada9",
    "metadata": {},
    "outputs": [],
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d434e02f-1307-4d17-a35e-1d13be28d82a",
    "metadata": {},
    "outputs": [
@@ -553,17 +553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "ea60d0c2-6302-4c6a-8d3c-1a79d78d0dcd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5f06d20310>"
+       "<matplotlib.legend.Legend at 0x7ff90fb15730>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -606,7 +606,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f5f06fe3550>"
+       "<matplotlib.legend.Legend at 0x7ff90fb2b7c0>"
       ]
      },
      "execution_count": 18,
